--- a/loanprediction.ipynb
+++ b/loanprediction.ipynb
@@ -10,6 +10,7 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
+      "author":"julius"
     }
   },
   "cells": [
